--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "test": "jest",
+    "test:watch": "jest --watchAll",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.8",
     "@hono/node-server": "^1.3.5",
     "dotenv": "^16.3.1",
+    "graphql": "^16.8.1",
     "hono": "^3.12.0",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.11",
     "@types/pg": "^8.10.9",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
     "tsx": "^3.12.2"
   }
 }
