constants created , subgraph query

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ DB_DATABASENAME="Database"
  
 
 SERVER_PORT=3030
+GRAPH_URI="https://api.studio.thegraph.com/query/yourPATH"
+BEACON_IP="http://127.0.0.1:3500/" # To fetch ethereum data from the node 
+BACKEND_ENDPOINT="http://localhost:"
