--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "graphql": "^16.8.1",
     "hono": "^3.12.0",
     "pg": "^8.11.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
     "@types/pg": "^8.10.9",
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "tsx": "^3.12.2"
