--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@hono/node-server": "^1.3.5",
     "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
     "hono": "^3.12.0",
     "pg": "^8.11.3",
     "react": "^18.2.0",
