--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@apollo/client": "^3.8.8",
     "@hono/node-server": "^1.3.5",
+    "@types/pino": "^7.0.5",
     "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
@@ -15,6 +16,8 @@
     "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.64.0",
     "pg": "^8.11.3",
+    "pino": "^8.18.0",
+    "pino-pretty": "^10.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "supertest": "^6.3.3"
